# IFCtoFiCR

./: .gitignore  CHANGELOG.md  README.md  lbd_to_ficr_converter.py  pyproject.toml
FiCR_ontology/: ficr.ttl  ficr_tbox.ttl
archive/legacy_pipeline/: Duplex_A_20110907.ttl  Duplex_A_20110907_ficr.ttl  README.md
ifc_to_ficr/: __init__.py  __main__.py  cli.py  coverage.py  guids.py  namespaces.py  profile.py  profile_ifc2x3.py  stage_a.py  stage_b.py  tbox.py
